# parquet-hs

./: .gitignore  cabal.project  flake.nix
parquet/: default.nix  flake.nix  parquet.cabal
parquet-hs/: CHANGELOG.md  flake.nix  overlay.nix  parquet.cabal
parquet-hs/lib/: ParquetFFI.hs
parquet-rs/: Cargo.toml  default.nix  flake.nix
parquet-rs/src/: lib.rs
parquet/lib/: ParquetFFI.hs
parquet/parquet-ffi-test/: parquet-ffi-test.cabal
parquet/parquet-ffi-test/src/: Main.hs  props.json  schema.json
